--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,10 +30,12 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.jl1.0.1.jar=/home/rapterpakfa/Descargas/JLayer1.0.1/jl1.0.1.jar
+file.reference.jl1.0.1.jar-1=library jar/JLayer1.0.1/jl1.0.1.jar
 includes=**
 jar.compress=true
 javac.classpath=\
-    ${file.reference.jl1.0.1.jar}
+    ${file.reference.jl1.0.1.jar}:\
+    ${file.reference.jl1.0.1.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
